--- a/src/main/java/cz/fi/muni/pv168/windows/RoomDialog.form
+++ b/src/main/java/cz/fi/muni/pv168/windows/RoomDialog.form
@@ -41,8 +41,8 @@
                                   </Group>
                                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="lblBeds" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="lblPrice" alignment="0" min="-2" pref="84" max="-2" attributes="0"/>
+                                      <Component id="lblPrice" pref="84" max="32767" attributes="0"/>
+                                      <Component id="comboBoxBeds" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -77,7 +77,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblBeds" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="comboBoxBeds" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -122,8 +122,6 @@
     </Component>
     <Component class="javax.swing.JTextField" name="lblNumber">
     </Component>
-    <Component class="javax.swing.JTextField" name="lblBeds">
-    </Component>
     <Component class="javax.swing.JTextField" name="lblPrice">
     </Component>
     <Component class="javax.swing.JCheckBox" name="chkBoxBalcony">
@@ -146,6 +144,23 @@
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="33" green="0" red="99" type="rgb"/>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="comboBoxBeds">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="9">
+            <StringItem index="0" value="One"/>
+            <StringItem index="1" value="Two"/>
+            <StringItem index="2" value="Three"/>
+            <StringItem index="3" value="Four"/>
+            <StringItem index="4" value="Five"/>
+            <StringItem index="5" value="Six"/>
+            <StringItem index="6" value="Seven"/>
+            <StringItem index="7" value="Eight"/>
+            <StringItem index="8" value="Nine"/>
+          </StringArray>
         </Property>
       </Properties>
     </Component>
